--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8092:80"
     restart: always
+
+networks:
+  cnc:
+
+
