--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "@supabase/supabase-js": "^2.36.0",
     "bootstrap": "^5.0.1",
     "ng-particles": "^2.1.11",
     "ngx-owl-carousel-o": "^5.0.0",
     "ngx-typed-js": "^2.0.2",
+    "or": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "tsparticles": "^1.18.11",
